seo optimisation and prvacy policy page added

--- a/bathrooms.html
+++ b/bathrooms.html
@@ -3,17 +3,32 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Expert bathroom fitting in Ashford, Maidstone, Folkestone, Canterbury & Kent. Showers, 
-  baths, tiling & plumbing—all installed to the highest standard.">
-  <meta name="keywords" content="bathroom fitting, shower installation, bath installation, tiling, plumbing, Ashford, Maidstone, Folkestone, Canterbury Kent">
-
+  
+  <meta name="description" content="Expert bathroom fitting services across Kent. Serving Ashford, Maidstone, Canterbury & Folkestone – from complete renovations to plumbing, tiling & accessibility upgrades.">
+  <meta name="keywords" content="bathroom fitters Kent, bathroom installation, shower fitting, bath replacement, bathroom tiling, accessible bathrooms, plumbing, Ashford, Maidstone, Canterbury, Folkestone">
 
   <title>Bathroom Services in Kent | A.P.T Builders</title>
-  <link rel="stylesheet" href="styles/style.css" />
-  <link rel="preload" as="image" href="images/bathroom-banner.png" importance="high">
+
+  <link rel="canonical" href="https://www.aptbuilders.co.uk/bathrooms.html" />
   <link rel="icon" href="images/aptfavicon.png" type="image/png">
-</head>
+  <link rel="preload" as="image" href="images/bathroom-banner.png" importance="high" />
+
+  <!-- Open Graph (Facebook, LinkedIn etc.) -->
+  <meta property="og:title" content="Bathroom Services in Kent | A.P.T Builders">
+  <meta property="og:description" content="Bathroom installations & renovations across Kent. Showers, plumbing, tiling, layout redesigns and more.">
+  <meta property="og:image" content="https://www.aptbuilders.co.uk/images/ogimage.png">
+  <meta property="og:url" content="https://www.aptbuilders.co.uk/bathrooms.html">
+  <meta property="og:type" content="website">
+
+  <!-- Twitter Card (for sharing previews on X/Twitter) -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Bathroom Services in Kent | A.P.T Builders">
+  <meta name="twitter:description" content="Bathroom refits, tiling, plumbing and more across Ashford, Maidstone & beyond. Free quotes.">
+  <meta name="twitter:image" content="https://www.aptbuilders.co.uk/images/ogimage.png">
+
+  <link rel="stylesheet" href="styles/style.css" />
 <body>
+<h1 class="visually-hidden">Bathroom Fitting Services in Kent | A.P.T Builders</h1>
 
   <header>
     <div class="header">
@@ -146,16 +161,13 @@
       </a>
     </section>
 
-  <footer class="site-footer">
-    <div class="contact-us-container">
-      <span class="contact-info">
-        <a href="tel:07794083532">📞 Alan - 07794083532</a>
-      </span>
-      <span class="contact-info">
-        <a href="mailto:alan@aptbuilders.co.uk">✉️ alan@aptbuilders.co.uk</a>
-      </span>
-    </div>
-  </footer>
+    <footer class="site-footer">
+      <div class="contact-us-container">
+        <span class="contact-info"><a href="tel:07794083532">📞 Alan - 07794083532</a></span>
+        <span class="contact-info"><a href="mailto:alan@aptbuilders.co.uk">✉️ alan@aptbuilders.co.uk</a></span>
+        <span class="contact-info"><a href="privacy-policy.html"> Our Privacy Policy</a></span>
+      </div>
+    </footer>
 
   <script>
      document.addEventListener('DOMContentLoaded', () => {
