--- a/blockpaving.html
+++ b/blockpaving.html
@@ -3,17 +3,34 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Block paving, driveways & pathways in Ashford, Maidstone, Folkestone, Canterbury & Kent. Durable surfaces, custom patterns & expert installation.">
-  <meta name="keywords" content="block paving, driveway installation, pathway paving, permeable paving, custom patterns, Ashford, Maidstone, Folkestone, Canterbury, Kent">
 
+  <meta name="description" content="Expert block paving services across Kent – driveways, patios, paths, and repairs in Ashford, Maidstone, Canterbury & Folkestone.">
+  <meta name="keywords" content="block paving, driveways, patios, paving repairs, garden paths, block paving Kent, Ashford, Maidstone, Canterbury, Folkestone">
 
-  <title>Block Paving & Driveways in Kent | A.P.T Builders</title>
-  <link rel="stylesheet" href="styles/style.css" />
-  <link rel="preload" as="image" href="images/blockpaving-banner.png" importance="high">
+  <title>Block Paving Services in Kent | A.P.T Builders</title>
+
+  <link rel="canonical" href="https://www.aptbuilders.co.uk/blockpaving.html" />
   <link rel="icon" href="images/aptfavicon.png" type="image/png">
+  <link rel="preload" as="image" href="images/blockpaving-banner.png" importance="high" />
 
+  <!-- Open Graph (Facebook/LinkedIn) -->
+  <meta property="og:title" content="Block Paving Services in Kent | A.P.T Builders">
+  <meta property="og:description" content="Driveways, patios and more – expert block paving services in Kent.">
+  <meta property="og:image" content="https://www.aptbuilders.co.uk/images/ogimage.png">
+  <meta property="og:url" content="https://www.aptbuilders.co.uk/blockpaving.html">
+  <meta property="og:type" content="website">
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Block Paving Services in Kent | A.P.T Builders">
+  <meta name="twitter:description" content="Block paving driveways, patios and repairs across Ashford, Maidstone, Canterbury & Kent.">
+  <meta name="twitter:image" content="https://www.aptbuilders.co.uk/images/ogimage.png">
+
+  <link rel="stylesheet" href="styles/style.css" />
 </head>
 <body>
+  <h1 class="visually-hidden">Block Paving Services in Kent | A.P.T Builders</h1>
+
 
   <header>
     <div class="header">
@@ -146,17 +163,14 @@
         <button class="service-gallery-btn">Check Out Our Block Paving Projects</button>
       </a>
     </section>
-
-  <footer class="site-footer">
-    <div class="contact-us-container">
-      <span class="contact-info">
-        <a href="tel:07794083532">📞 Alan - 07794083532</a>
-      </span>
-      <span class="contact-info">
-        <a href="mailto:alan@aptbuilders.co.uk">✉️ alan@aptbuilders.co.uk</a>
-      </span>
-    </div>
-  </footer>
+    
+      <footer class="site-footer">
+      <div class="contact-us-container">
+        <span class="contact-info"><a href="tel:07794083532">📞 Alan - 07794083532</a></span>
+        <span class="contact-info"><a href="mailto:alan@aptbuilders.co.uk">✉️ alan@aptbuilders.co.uk</a></span>
+        <span class="contact-info"><a href="privacy-policy.html"> Our Privacy Policy</a></span>
+      </div>
+    </footer>
 
   <script>
       document.addEventListener('DOMContentLoaded', () => {
