--- a/contact.html
+++ b/contact.html
@@ -1,17 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <meta name="description" content="Get in touch with A.P.T. Builders—serving Ashford, Maidstone, Folkestone, Canterbury, Sevenoaks, Tunbridge Wells & all Kent. Request a quote or ask a question today.">
-   <meta name="keywords" content="contact, APT Builders, request a quote, enquiries, phone, email, Ashford, Maidstone, Folkestone, Canterbury, Sevenoaks, Tunbridge Wells, Kent">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <meta name="description" content="Get in touch with A.P.T Builders — serving Ashford, Maidstone, Folkestone, Canterbury, Sevenoaks, Tunbridge Wells & all Kent. Request a quote or ask a question today.">
+  <meta name="keywords" content="contact, APT Builders, request a quote, enquiries, phone, email, Ashford, Maidstone, Folkestone, Canterbury, Sevenoaks, Tunbridge Wells, Kent">
 
-    <title>Contact Us</title>
-    <link rel="stylesheet" href="styles/style.css">
-    <link rel="icon" href="images/aptfavicon.png" type="image/png">
+  <title>Contact A.P.T Builders | Ashford, Maidstone, Canterbury, Kent</title>
+
+  <link rel="canonical" href="https://www.aptbuilders.co.uk/contact.html">
+  <link rel="icon" href="images/aptfavicon.png" type="image/png">
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="Contact A.P.T Builders | Kent's Trusted Builders">
+  <meta property="og:description" content="Speak with A.P.T Builders about your building project in Ashford, Canterbury, Maidstone, or beyond. Get a fast quote.">
+  <meta property="og:image" content="https://www.aptbuilders.co.uk/images/ogimage.png">
+  <meta property="og:url" content="https://www.aptbuilders.co.uk/contact.html">
+  <meta property="og:type" content="website">
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Contact A.P.T Builders | Building Services in Kent">
+  <meta name="twitter:description" content="Request a quote or ask a question — contact A.P.T Builders today. Serving Kent including Ashford, Maidstone, Canterbury & more.">
+  <meta name="twitter:image" content="https://www.aptbuilders.co.uk/images/ogimage.png">
+
+  <link rel="stylesheet" href="styles/style.css">
 </head>
+
 <body>
+  <h1 class="visually-hidden">Contact A.P.T Builders in Ashford, Maidstone, Canterbury & Kent</h1>
+
   <div class="page-wrapper">
    
     <header>
@@ -122,14 +141,12 @@
         </a>
     </div>
 
-    <footer class="site-footer">
+    
+      <footer class="site-footer">
       <div class="contact-us-container">
-        <span class="contact-info">
-          <a href="tel:07794083532">📞 Alan - 07794083532</a>
-        </span>
-        <span class="contact-info">
-          <a href="mailto:alan@aptbuilders.co.uk">✉️ alan@aptbuilders.co.uk</a>
-        </span>
+        <span class="contact-info"><a href="tel:07794083532">📞 Alan - 07794083532</a></span>
+        <span class="contact-info"><a href="mailto:alan@aptbuilders.co.uk">✉️ alan@aptbuilders.co.uk</a></span>
+        <span class="contact-info"><a href="privacy-policy.html"> Our Privacy Policy</a></span>
       </div>
     </footer>
 
