--- a/decorating.html
+++ b/decorating.html
@@ -1,18 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Professional decorating services in Ashford, Maidstone, Folkestone, Canterbury & across Kent. Interior & exterior painting, wallpapering & finishing touches.">
-  <meta name="keywords" content="decorating, painting, wallpapering, interior decorating, exterior painting, Ashford, Maidstone, Folkestone, Canterbury Kent">
 
+  <meta name="description" content="Interior and exterior painting and decorating services across Kent including Ashford, Maidstone, Folkestone, and Canterbury. High-quality finishes from A.P.T Builders.">
+  <meta name="keywords" content="painting, decorating, painters, interior painting, exterior decorating, wallpapering, feature walls, Kent, Ashford, Maidstone, Canterbury, Folkestone">
 
   <title>Painting & Decorating in Kent | A.P.T Builders</title>
+
+  <link rel="canonical" href="https://www.aptbuilders.co.uk/decorating.html" />
+  <link rel="icon" href="images/aptfavicon.png" type="image/png">
+  <link rel="preload" as="image" href="images/painting_10722140.png" importance="high" />
+
+  <!-- Open Graph (Facebook, LinkedIn) -->
+  <meta property="og:title" content="Painting & Decorating in Kent | A.P.T Builders">
+  <meta property="og:description" content="Expert interior & exterior decorating in Kent – from feature walls to full home painting projects.">
+  <meta property="og:image" content="https://www.aptbuilders.co.uk/images/ogimage.png">
+  <meta property="og:url" content="https://www.aptbuilders.co.uk/decorating.html">
+  <meta property="og:type" content="website">
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Painting & Decorating Services in Kent | A.P.T Builders">
+  <meta name="twitter:description" content="Wallpapering, painting and more – trusted decorators in Ashford, Maidstone, Canterbury & Folkestone.">
+  <meta name="twitter:image" content="https://www.aptbuilders.co.uk/images/ogimage.png">
+
   <link rel="stylesheet" href="styles/style.css" />
-  <link rel="preload" as="image" href="images/decorating-banner.png" importance="high">
-   <link rel="icon" href="images/aptfavicon.png" type="image/png">
 </head>
 <body>
+<h1 class="visually-hidden">Painting & Decorating Services in Kent | A.P.T Builders</h1>
 
   <header>
     <div class="header">
@@ -147,16 +165,13 @@
       </a>
     </section>
 
-  <footer class="site-footer">
-    <div class="contact-us-container">
-      <span class="contact-info">
-        <a href="tel:07794083532">📞 Alan - 07794083532</a>
-      </span>
-      <span class="contact-info">
-        <a href="mailto:alan@aptbuilders.co.uk">✉️ alan@aptbuilders.co.uk</a>
-      </span>
-    </div>
-  </footer>
+      <footer class="site-footer">
+      <div class="contact-us-container">
+        <span class="contact-info"><a href="tel:07794083532">📞 Alan - 07794083532</a></span>
+        <span class="contact-info"><a href="mailto:alan@aptbuilders.co.uk">✉️ alan@aptbuilders.co.uk</a></span>
+        <span class="contact-info"><a href="privacy-policy.html"> Our Privacy Policy</a></span>
+      </div>
+    </footer>
 
   <script>
   document.addEventListener('DOMContentLoaded', () => {
