--- a/extensions.html
+++ b/extensions.html
@@ -1,18 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="House extensions & conversions in Ashford, Maidstone, Folkestone Canterbury & Kent. Bespoke designs, planning to completion—maximize your space.">
-  <meta name="keywords" content="house extension, loft conversion, garage conversion, home extension, planning & build, Ashford, Maidstone, Folkestone, Canterbury Kent">
 
+  <meta name="description" content="Home extensions, garage conversions and full builds in Kent, covering Ashford, Maidstone, Canterbury & Folkestone. Expand your living space with A.P.T Builders.">
+  <meta name="keywords" content="home extensions, garage conversions, house build, room extension, Kent builders, Ashford, Maidstone, Canterbury, Folkestone">
 
-  <title>Extensions & Conversions in Kent | A.P.T Builders</title>
+  <title>House Extensions & Conversions | A.P.T Builders Kent</title>
+
+  <link rel="canonical" href="https://www.aptbuilders.co.uk/extensions.html" />
+  <link rel="icon" href="images/aptfavicon.png" type="image/png">
+  <link rel="preload" as="image" href="images/extension-banner.png" importance="high" />
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="House Extensions & Conversions in Kent | A.P.T Builders">
+  <meta property="og:description" content="Maximise your space with professional extensions and garage conversions across Kent.">
+  <meta property="og:image" content="https://www.aptbuilders.co.uk/images/ogimage.png">
+  <meta property="og:url" content="https://www.aptbuilders.co.uk/extensions.html">
+  <meta property="og:type" content="website">
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Extensions & Conversions | A.P.T Builders Kent">
+  <meta name="twitter:description" content="Specialist house extensions and garage conversions in Ashford, Maidstone, Canterbury and Folkestone.">
+  <meta name="twitter:image" content="https://www.aptbuilders.co.uk/images/ogimage.png">
+
   <link rel="stylesheet" href="styles/style.css" />
-  <link rel="preload" as="image" href="images/extension-banner.png" importance="high">
-   <link rel="icon" href="images/aptfavicon.png" type="image/png">
+</head>
+
 </head>
 <body>
+<h1 class="visually-hidden">House Extensions & Garage Conversions in Kent | A.P.T Builders</h1>
 
   <header>
     <div class="header">
@@ -148,16 +168,13 @@
     </section>
 
 
-  <footer class="site-footer">
-    <div class="contact-us-container">
-      <span class="contact-info">
-        <a href="tel:07794083532">📞 Alan - 07794083532</a>
-      </span>
-      <span class="contact-info">
-        <a href="mailto:alan@aptbuilders.co.uk">✉️ alan@aptbuilders.co.uk</a>
-      </span>
-    </div>
-  </footer>
+  <  <footer class="site-footer">
+      <div class="contact-us-container">
+        <span class="contact-info"><a href="tel:07794083532">📞 Alan - 07794083532</a></span>
+        <span class="contact-info"><a href="mailto:alan@aptbuilders.co.uk">✉️ alan@aptbuilders.co.uk</a></span>
+        <span class="contact-info"><a href="privacy-policy.html"> Our Privacy Policy</a></span>
+      </div>
+    </footer>
 
   <script>
   document.addEventListener('DOMContentLoaded', () => {
