--- a/landscaping.html
+++ b/landscaping.html
@@ -3,18 +3,34 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Landscaping & groundwork experts in Ashford, Maidstone, Folkestone, Canterbury & across Kent. Patios, turfing, 
-  drainage & site preparation—beautiful results.">
-  <meta name="keywords" content="landscaping, groundwork, patio installation, turf laying, drainage, site preparation, Ashford, Maidstone, Folkestone, Canterbury Kent">
 
+  <meta name="description" content="Landscaping and groundwork services in Kent – turfing, decking, patios, fencing & outdoor improvements across Ashford, Maidstone, Canterbury & Folkestone.">
+  <meta name="keywords" content="landscaping, garden landscaping, turfing, fencing, decking, patios, groundwork, outdoor design, garden improvements, Kent, Ashford, Maidstone, Canterbury, Folkestone">
 
   <title>Landscaping Services in Kent | A.P.T Builders</title>
+
+  <link rel="canonical" href="https://www.aptbuilders.co.uk/landscaping.html" />
+  <link rel="icon" href="images/aptfavicon.png" type="image/png">
+  <link rel="preload" as="image" href="images/landscaping-banner.png" importance="high" />
+
+  <!-- Open Graph (Facebook/LinkedIn) -->
+  <meta property="og:title" content="Landscaping Services in Kent | A.P.T Builders">
+  <meta property="og:description" content="Professional landscaping and garden groundwork across Kent – patios, decking, fencing, and more.">
+  <meta property="og:image" content="https://www.aptbuilders.co.uk/images/ogimage.png">
+  <meta property="og:url" content="https://www.aptbuilders.co.uk/landscaping.html">
+  <meta property="og:type" content="website">
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Landscaping Services in Kent | A.P.T Builders">
+  <meta name="twitter:description" content="From turfing to patios – expert landscaping services in Ashford, Maidstone, Canterbury & beyond.">
+  <meta name="twitter:image" content="https://www.aptbuilders.co.uk/images/ogimage.png">
+
   <link rel="stylesheet" href="styles/style.css" />
-  <link rel="preload" as="image" href="images/landscaping-banner.png" importance="high">
-   <link rel="icon" href="images/aptfavicon.png" type="image/png">
 
 </head>
 <body>
+  <h1 class="visually-hidden">Landscaping Services in Kent | A.P.T Builders</h1>
 
   <header>
     <div class="header">
@@ -147,16 +163,14 @@
       </a>
     </section>
 
-  <footer class="site-footer">
-    <div class="contact-us-container">
-      <span class="contact-info">
-        <a href="tel:07794083532">📞 Alan - 07794083532</a>
-      </span>
-      <span class="contact-info">
-        <a href="mailto:alan@aptbuilders.co.uk">✉️ alan@aptbuilders.co.uk</a>
-      </span>
-    </div>
-  </footer>
+ 
+    <footer class="site-footer">
+      <div class="contact-us-container">
+        <span class="contact-info"><a href="tel:07794083532">📞 Alan - 07794083532</a></span>
+        <span class="contact-info"><a href="mailto:alan@aptbuilders.co.uk">✉️ alan@aptbuilders.co.uk</a></span>
+        <span class="contact-info"><a href="privacy-policy.html"> Our Privacy Policy</a></span>
+      </div>
+    </footer>
 
   <!-- Burger Menu Script -->
   <script>
