--- a/services.html
+++ b/services.html
@@ -3,20 +3,35 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Ashford, Maidstone, Folkestone, Canterbury & Kent builders: roofing, bathroom & kitchen fitting, 
-  landscaping, brickwork, block paving, decorating, extensions & conversions.">
-
-  <meta name="keywords" content="builders, roofing, bathroom fittings, kitchen fittings, landscaping, groundwork, 
-  brickwork, block paving, driveways, pathways, decorating, extensions, conversions, Ashford, Maidstone, Folkestone, Canterbury, Kent">
+  
+  <meta name="description" content="Explore our expert building services in Kent: roofing, kitchens, bathrooms, landscaping, brickwork, paving, decorating, extensions & conversions across Ashford, Maidstone, Folkestone & Canterbury.">
+  <meta name="keywords" content="building services Kent, Kent builders, roofing, bathroom fitting, kitchen fitting, landscaping, groundwork, brickwork, block paving, decorating, extensions, conversions, Ashford, Maidstone, Folkestone, Canterbury">
 
   <title>Our Services | A.P.T Builders in Kent</title>
+
+  <link rel="canonical" href="https://www.aptbuilders.co.uk/services.html" />
+  <link rel="icon" href="images/aptfavicon.png" type="image/png">
+  <link rel="preload" as="image" href="images/services-banner.png" importance="high" />
+
+  <!-- Open Graph (Facebook, LinkedIn) -->
+  <meta property="og:title" content="Our Services | A.P.T Builders in Kent">
+  <meta property="og:description" content="Reliable Kent builders offering roofing, bathrooms, kitchens, landscaping, and more across Ashford, Maidstone, Folkestone & Canterbury.">
+  <meta property="og:image" content="https://www.aptbuilders.co.uk/images/ogimage.png">
+  <meta property="og:url" content="https://www.aptbuilders.co.uk/services.html">
+  <meta property="og:type" content="website">
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Our Services | A.P.T Builders in Kent">
+  <meta name="twitter:description" content="Kent building services: Roofing, kitchens, bathrooms, brickwork, landscaping & more.">
+  <meta name="twitter:image" content="https://www.aptbuilders.co.uk/images/ogimage.png">
+
+  <!-- Stylesheet -->
   <link rel="stylesheet" href="styles/style.css" />
-  <link rel="preload" as="image" href="images/services-banner.png" importance="high">
-   <link rel="icon" href="images/aptfavicon.png" type="image/png">
+  </head>
 
-</head>
 <body>
-
+<h1 class="visually-hidden">Our Building Services Across Kent | A.P.T Builders</h1>
     <header>
         <div class="header">
         <a href="index.html">
@@ -176,16 +191,13 @@
     </section>
 
 
-  <footer class="site-footer">
-    <div class="contact-us-container">
-      <span class="contact-info">
-        <a href="tel:07794083532">📞 Alan - 07794083532</a>
-      </span>
-      <span class="contact-info">
-        <a href="mailto:alan@aptbuilders.co.uk">✉️ alan@aptbuilders.co.uk</a>
-      </span>
-    </div>
-  </footer>
+    <footer class="site-footer">
+      <div class="contact-us-container">
+        <span class="contact-info"><a href="tel:07794083532">📞 Alan - 07794083532</a></span>
+        <span class="contact-info"><a href="mailto:alan@aptbuilders.co.uk">✉️ alan@aptbuilders.co.uk</a></span>
+        <span class="contact-info"><a href="privacy-policy.html"> Our Privacy Policy</a></span>
+      </div>
+    </footer>
 
   <script>
      document.addEventListener('DOMContentLoaded', () => {
