--- a/brickwork.html
+++ b/brickwork.html
@@ -3,15 +3,33 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-   <meta name="description" content="Quality brickwork services in Ashford, Maidstone, Folkestone Canterbury & Kent. New walls, repairs, pointing & restoration—built to last.">
-   <meta name="keywords" content="brickwork, bricklaying, wall building, brick repair, pointing, restoration, Ashford, Maidstone, Folkestone, Canterbury Kent">
+
+  <meta name="description" content="Skilled brickwork services across Kent: new builds, repairs, garden walls, extensions, and repointing in Ashford, Maidstone, Canterbury & Folkestone.">
+  <meta name="keywords" content="brickwork Kent, bricklaying, repointing, garden walls, extensions, structural brickwork, masonry, Ashford, Maidstone, Canterbury, Folkestone">
 
   <title>Brickwork Services in Kent | A.P.T Builders</title>
-  <link rel="stylesheet" href="styles/style.css" />
-  <link rel="preload" as="image" href="images/brickwork-banner.png" importance="high">
+
+  <link rel="canonical" href="https://www.aptbuilders.co.uk/brickwork.html" />
   <link rel="icon" href="images/aptfavicon.png" type="image/png">
+  <link rel="preload" as="image" href="images/brickwork-banner.png" importance="high" />
+
+  <!-- Open Graph (Facebook/LinkedIn) -->
+  <meta property="og:title" content="Brickwork Services in Kent | A.P.T Builders">
+  <meta property="og:description" content="Expert bricklaying and repointing services across Kent. Reliable and experienced team.">
+  <meta property="og:image" content="https://www.aptbuilders.co.uk/images/ogimage.png">
+  <meta property="og:url" content="https://www.aptbuilders.co.uk/brickwork.html">
+  <meta property="og:type" content="website">
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Brickwork Services in Kent | A.P.T Builders">
+  <meta name="twitter:description" content="New builds, repointing and garden walls – full brickwork services across Ashford, Maidstone, Canterbury & more.">
+  <meta name="twitter:image" content="https://www.aptbuilders.co.uk/images/ogimage.png">
+
+  <link rel="stylesheet" href="styles/style.css" />
 </head>
 <body>
+  <h1 class="visually-hidden">Brickwork Services in Kent | A.P.T Builders</h1>
 
   <header>
     <div class="header">
@@ -144,16 +162,13 @@
       </a>
     </section>
 
-  <footer class="site-footer">
-    <div class="contact-us-container">
-      <span class="contact-info">
-        <a href="tel:07794083532">📞 Alan - 07794083532</a>
-      </span>
-      <span class="contact-info">
-        <a href="mailto:alan@aptbuilders.co.uk">✉️ alan@aptbuilders.co.uk</a>
-      </span>
-    </div>
-  </footer>
+   <footer class="site-footer">
+      <div class="contact-us-container">
+        <span class="contact-info"><a href="tel:07794083532">📞 Alan - 07794083532</a></span>
+        <span class="contact-info"><a href="mailto:alan@aptbuilders.co.uk">✉️ alan@aptbuilders.co.uk</a></span>
+        <span class="contact-info"><a href="privacy-policy.html"> Our Privacy Policy</a></span>
+      </div>
+    </footer>
 
   <script>
      document.addEventListener('DOMContentLoaded', () => {
