--- a/roofing.html
+++ b/roofing.html
@@ -3,20 +3,36 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Professional roofing services in Ashford, Maidstone, Folkestone, Canterbury & across Kent. 
-  From repairs and replacements to new installations—durable, quality workmanship.">
-  <meta name="keywords" content="roofing, roof repair, roof replacement, new roof installation, Ashford, Maidstone, Folkestone, Canterbury, Kent builders">
-
+  
+  <meta name="description" content="Reliable roofing services across Kent including Ashford, Maidstone, Folkestone & Canterbury. New roofs, repairs, tile replacement, chimney work & more.">
+  <meta name="keywords" content="roofing Kent, roof repairs, new roof Kent, flat roof, pitched roof, chimney repointing, fascia replacement, roofers in Ashford, Maidstone, Canterbury, Folkestone">
 
   <title>Roofing Services in Kent | A.P.T Builders</title>
+
+  <link rel="canonical" href="https://www.aptbuilders.co.uk/roofing.html" />
+  <link rel="icon" href="images/aptfavicon.png" type="image/png">
+  <link rel="preload" as="image" href="images/roof-banner.png" importance="high" />
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="Roofing Services in Kent | A.P.T Builders">
+  <meta property="og:description" content="Expert roofing solutions for homes & businesses across Kent – repairs, installations, tile & slate work, chimney repointing.">
+  <meta property="og:image" content="https://www.aptbuilders.co.uk/images/ogimage.png">
+  <meta property="og:url" content="https://www.aptbuilders.co.uk/roofing.html">
+  <meta property="og:type" content="website">
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Roofing Services in Kent | A.P.T Builders">
+  <meta name="twitter:description" content="New roofs, repairs, and roofing maintenance in Ashford, Maidstone & more. Fully insured with 18+ years’ experience.">
+  <meta name="twitter:image" content="https://www.aptbuilders.co.uk/images/ogimage.png">
+
   <link rel="stylesheet" href="styles/style.css" />
-  <link rel="preload" as="image" href="images/roof-banner.png" importance="high">
-   <link rel="icon" href="images/aptfavicon.png" type="image/png">
 
 </head>
 <body>
 
-    
+    <h1 class="visually-hidden">Roofing Services in Kent | Roof Repairs & Installation by A.P.T Builders</h1>
+
 
     <header>
         <div class="header">
@@ -164,18 +180,13 @@
 
 
 
-
-  <footer class="site-footer">
-    <div class="contact-us-container">
-      <span class="contact-info">
-        <a href="tel:07794083532">📞 Alan - 07794083532</a>
-      </span>
-      <span class="contact-info">
-        <a href="mailto:alan@aptbuilders.co.uk">✉️ alan@aptbuilders.co.uk</a>
-      </span>
-    </div>
-  </footer>
-
+    <footer class="site-footer">
+      <div class="contact-us-container">
+        <span class="contact-info"><a href="tel:07794083532">📞 Alan - 07794083532</a></span>
+        <span class="contact-info"><a href="mailto:alan@aptbuilders.co.uk">✉️ alan@aptbuilders.co.uk</a></span>
+        <span class="contact-info"><a href="privacy-policy.html"> Our Privacy Policy</a></span>
+      </div>
+    </footer>
   <script>
      document.addEventListener('DOMContentLoaded', () => {
   const burgerToggle = document.getElementById('burgerToggle');
